--- a/ELWeb/Web/templates/index.html
+++ b/ELWeb/Web/templates/index.html
@@ -190,7 +190,7 @@
                             <div>version: **info.protocol.version**</div>
                         </div>
                     </div>
-                    <div ng-if="resTypeOwn(info.type)">
+                    <div>
                         shared:
                         <div style="margin-left: 15px;" ng-repeat="shared_info in info.shared">
                             <div>**shared_info.uid** : **shared_info.pid**</div>
