--- a/Demo_app/DemoHealthCareApp/templates/index.html
+++ b/Demo_app/DemoHealthCareApp/templates/index.html
@@ -300,7 +300,7 @@
             },
             function errorCallback(response) {
                 console.log(response);
-                alert('el rs server access 1 field');
+                alert('el rs server access 1 failed');
             }
         );
     });
@@ -325,7 +325,7 @@
             },
             function errorCallback(response) {
                 console.log(response);
-                alert('el rs server access field');
+                alert('el rs server access failed');
             }
         );
 
