--- a/FHIRWeb/Web/templates/index.html
+++ b/FHIRWeb/Web/templates/index.html
@@ -280,7 +280,7 @@
                 },
                 function errorCallback(response) {
                     console.log(response);
-                    alert('fhir rs server access 1 field');
+                    alert('fhir rs server access 1 failed');
                 }
             );
 
@@ -304,11 +304,11 @@
                     function successCallback(response) {
                         console.log(response);
                         if (response.data === 'success') { location.reload(); }
-                        else { alert('unshare field'); }
+                        else { alert('unshare failed'); }
 
                     },
                     function errorCallback(response) {
-                        alert('unshare field');
+                        alert('unshare falied');
                     }
                 );
             };
@@ -344,10 +344,10 @@
                                 function successCallback(response) {
                                     console.log(response);
                                     if (response.data === 'success') { location.reload(); }
-                                    else { alert('share field'); }
+                                    else { alert('share failed'); }
                                 },
                                 function errorCallback(response) {
-                                    alert('share field');
+                                    alert('share failed');
                                 }
                             );
 
@@ -382,7 +382,7 @@
                 },
                 function errorCallback(response) {
                     console.log(response);
-                    alert('fhir rs server access field');
+                    alert('fhir rs server access failed');
                 }
             );
 
@@ -406,10 +406,10 @@
                     function successCallback(response) {
                         console.log(response);
                         if (response.data === 'success') { location.reload(); }
-                        else { alert('unshare field'); }
+                        else { alert('unshare failed'); }
                     },
                     function errorCallback(response) {
-                        alert('unshare field');
+                        alert('unshare failed');
                     }
                 );
             };
@@ -445,11 +445,11 @@
                                 function successCallback(response) {
                                     console.log(response);
                                     if (response.data === 'success') { location.reload(); }
-                                    else { alert('share field'); }
+                                    else { alert('share failed'); }
 
                                 },
                                 function errorCallback(response) {
-                                    alert('share field');
+                                    alert('share failed');
                                 }
                             );
 
